--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,8 @@ docs/_build/
 # Pytest files
 .pytest_cache
 tests/__pycache__
+tests/temp_output_files
+tests/temp_connection_files
 .hypothesis
 # Output data files which may be big
 
