--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,27 @@
-brian2genn
-django
-matplotlib
-pandas
-pytest
-scipy
-scp
+asn1crypto==1.1.0
+Brian2==2.2.2.1
+Brian2GeNN==1.3.1
+cffi==1.12.3
+cryptography==2.7
+cycler==0.10.0
+Cython==0.29.13
+Django==2.2.6
+django-extensions==2.2.3
+django-sslserver==0.21
+Jinja2==2.10.3
+kiwisolver==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.1.1
+mpmath==1.1.0
+numpy==1.17.2
+pandas==0.25.1
+pycparser==2.19
+pyOpenSSL==19.0.0
+pyparsing==2.4.2
+python-dateutil==2.8.0
+pytz==2019.3
+scipy==1.3.1
+six==1.12.0
+sqlparse==0.3.0
+sympy==1.4
+Werkzeug==0.16.0
