--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==1.1.0
+bcrypt==3.1.7
 Brian2==2.2.2.1
 Brian2GeNN==1.3.1
 cffi==1.12.3
@@ -15,12 +16,15 @@ matplotlib==3.1.1
 mpmath==1.1.0
 numpy==1.17.2
 pandas==0.25.1
+paramiko==2.6.0
 pycparser==2.19
+PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
 python-dateutil==2.8.0
 pytz==2019.3
 scipy==1.3.1
+scp==0.13.2
 six==1.12.0
 sqlparse==0.3.0
 sympy==1.4
