--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ tests/temp_output_files
 tests/temp_connection_files
 .hypothesis
 cxsystem2.egg-info
+dist
+build
 # Output data files which may be big
 
 
