slurm job update, setup.py update, manifest update

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,8 @@
 include requirements.txt
-recursive-include tests *
+include slurm.job
+recursive-include tests *.py *.csv *.json *.gz
 recursive-include cxsystem2 *
-recursive-include config_files *
+recursive-include cxsystem2/gui/cx_gui *.css *.js *.html
+recursive-include config_files *.json *.csv
+global-exclude __pycache__
+global-exclude *.py[co]
