- Added NDNEURON class for testing neurodynlib integration - Introduced new params to make vm randomization more explicit (V_init_min, V_init_max; if no rand, then use V_init)

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,11 @@ tests/temp_connection_files
 cxsystem2.egg-info
 dist
 build
+
+# Developer files
+test_notebooks/
+
+
 # Output data files which may be big
 
 
