Cleaned up example configs - removed unnecessary parameters from anatomy config (noise_sigma, gx_mean, gx_std) - in physio, new parameters V_init_min, V_init_max, tau_tonic_rampup

--- a/cxsystem2/gui/cx_gui/examples/cobaeif_physiology_config.json
+++ b/cxsystem2/gui/cx_gui/examples/cobaeif_physiology_config.json
@@ -1,374 +1,1 @@
-{
-  "physio_data": [
-    {
-      "Variable": "model_variation",
-      "Value": 1,
-      "Comment": ""
-    },
-    {
-      "Variable": "neuron_model",
-      "Value": "'EIF'",
-      "Comment": ""
-    },
-    {
-      "Variable": "excitation_model",
-      "Value": "'SIMPLE_E'",
-      "Comment": ""
-    },
-    {
-      "Variable": "inhibition_model",
-      "Value": "'SIMPLE_I'",
-      "Comment": ""
-    },
-    {
-      "Variable": "pc_neuron_model",
-      "Value": "'EIF'",
-      "Comment": ""
-    },
-    {
-      "Variable": "pc_excitation_model",
-      "Value": "'SIMPLE_E'",
-      "Comment": ""
-    },
-    {
-      "Variable": "pc_inhibition_model",
-      "Value": "'SIMPLE_I'",
-      "Comment": ""
-    },
-    {
-      "Variable": "background_rate",
-      "Value": "0*Hz",
-      "Comment": ""
-    },
-    {
-      "Variable": "background_rate_inhibition",
-      "Value": "0*Hz",
-      "Comment": ""
-    },
-    {
-      "Variable": "tonic_depol_level",
-      "Value": 0,
-      "Comment": ""
-    },
-    {
-      "Variable": "J",
-      "Value": "6*nS",
-      "Comment": ""
-    },
-    {
-      "Variable": "J_I",
-      "Value": "0*nS",
-      "Comment": ""
-    },
-    {
-      "Variable": "k",
-      "Value": 5,
-      "Comment": ""
-    },
-    {
-      "Variable": "k_I",
-      "Value": 0,
-      "Comment": ""
-    },
-    {
-      "Variable": "flag_background_calcium_scaling",
-      "Value": 0,
-      "Comment": ""
-    },
-    {
-      "Variable": "background_E_E_weight",
-      "Value": "J",
-      "Comment": ""
-    },
-    {
-      "Variable": "background_E_I_weight",
-      "Value": "J",
-      "Comment": ""
-    },
-    {
-      "Variable": "background_I_E_weight",
-      "Value": "k*J",
-      "Comment": ""
-    },
-    {
-      "Variable": "background_I_I_weight",
-      "Value": "k*J",
-      "Comment": ""
-    },
-    {
-      "Variable": "_weights",
-      "Key-Value": [
-        {
-          "Key": "w_TC_E-E_connections",
-          "Value": "J",
-          "Comment": ""
-        },
-        {
-          "Key": "w_TC_E-I_connections",
-          "Value": "J",
-          "Comment": ""
-        },
-        {
-          "Key": "w_All_other_E-E_connections",
-          "Value": "J",
-          "Comment": ""
-        },
-        {
-          "Key": "w_All_other_E-I_connections",
-          "Value": "J",
-          "Comment": ""
-        },
-        {
-          "Key": "w_All_other_I-E_connections",
-          "Value": "k*J",
-          "Comment": ""
-        },
-        {
-          "Key": "w_All_I-I_connections",
-          "Value": "k*J",
-          "Comment": ""
-        }
-      ]
-    },
-    {
-      "Variable": "cw",
-      "Key-Value": [
-        {
-          "Key": "cw_in_SS",
-          "Value": "_weights['w_TC_E-E_connections']",
-          "Comment": ""
-        },
-        {
-          "Key": "cw_in_BC",
-          "Value": "_weights['w_TC_E-I_connections']",
-          "Comment": ""
-        },
-        {
-          "Key": "cw_SS_SS",
-          "Value": "_weights['w_All_other_E-E_connections']",
-          "Comment": ""
-        },
-        {
-          "Key": "cw_SS_BC",
-          "Value": "_weights['w_All_other_E-I_connections']",
-          "Comment": ""
-        },
-        {
-          "Key": "cw_BC_SS",
-          "Value": "_weights['w_All_other_I-E_connections']",
-          "Comment": ""
-        },
-        {
-          "Key": "cw_BC_BC",
-          "Value": "_weights['w_All_I-I_connections']",
-          "Comment": ""
-        }
-      ]
-    },
-    {
-      "Variable": "delay",
-      "Key-Value": [
-        {
-          "Key": "delay_in_SS",
-          "Value": "3.0*ms",
-          "Comment": ""
-        },
-        {
-          "Key": "delay_in_BC",
-          "Value": "3.0*ms",
-          "Comment": ""
-        },
-        {
-          "Key": "delay_SS_SS",
-          "Value": "3.0*ms",
-          "Comment": ""
-        },
-        {
-          "Key": "delay_SS_BC",
-          "Value": "3.0*ms",
-          "Comment": ""
-        },
-        {
-          "Key": "delay_BC_SS",
-          "Value": "3.0*ms",
-          "Comment": ""
-        },
-        {
-          "Key": "delay_BC_BC",
-          "Value": "3.0*ms",
-          "Comment": ""
-        }
-      ]
-    },
-    {
-      "Variable": "sp",
-      "Key-Value": [
-        {
-          "Key": "sp_in_SS",
-          "Value": "0.8",
-          "Comment": ""
-        },
-        {
-          "Key": "sp_in_BC",
-          "Value": "0.1125",
-          "Comment": ""
-        }
-      ]
-    },
-    {
-      "Variable": "VPM",
-      "Value": "",
-      "Comment": ""
-    },
-    {
-      "Variable": "SS",
-      "Key-Value": [
-        {
-          "Key": "C",
-          "Value": "200*pF",
-          "Comment": ""
-        },
-        {
-          "Key": "gL",
-          "Value": "10*nS",
-          "Comment": ""
-        },
-        {
-          "Key": "taum_soma",
-          "Value": "C/gL",
-          "Comment": ""
-        },
-        {
-          "Key": "EL",
-          "Value": "-60 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "Vr",
-          "Value": "-60 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "Vcut",
-          "Value": "20 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "VT",
-          "Value": "-63 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "DeltaT",
-          "Value": "2 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "V_res",
-          "Value": "-80 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "Ee",
-          "Value": "0 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "Ei",
-          "Value": "-80 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "tau_e",
-          "Value": "5*ms",
-          "Comment": ""
-        },
-        {
-          "Key": "tau_i",
-          "Value": "10*ms",
-          "Comment": ""
-        },
-        {
-          "Key": "tonic_current",
-          "Value": "0*pA",
-          "Comment": ""
-        }
-      ]
-    },
-    {
-      "Variable": "BC",
-      "Key-Value": [
-        {
-          "Key": "C",
-          "Value": "200*pF",
-          "Comment": ""
-        },
-        {
-          "Key": "gL",
-          "Value": "10*nS",
-          "Comment": ""
-        },
-        {
-          "Key": "taum_soma",
-          "Value": "C/gL",
-          "Comment": ""
-        },
-        {
-          "Key": "EL",
-          "Value": "-60 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "Vr",
-          "Value": "-60 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "Vcut",
-          "Value": "20 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "VT",
-          "Value": "-63 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "DeltaT",
-          "Value": "2 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "V_res",
-          "Value": "-80 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "Ee",
-          "Value": "0 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "Ei",
-          "Value": "-80 * mV",
-          "Comment": ""
-        },
-        {
-          "Key": "tau_e",
-          "Value": "5*ms",
-          "Comment": ""
-        },
-        {
-          "Key": "tau_i",
-          "Value": "10*ms",
-          "Comment": ""
-        },
-        {
-          "Key": "tonic_current",
-          "Value": "0*pA",
-          "Comment": ""
-        }
-      ]
-    }
-  ]
-}
+{"physio_data": [{"Variable": "model_variation", "Value": 1, "Comment": ""}, {"Variable": "neuron_model", "Value": "'EIF'", "Comment": ""}, {"Variable": "excitation_model", "Value": "'SIMPLE_E'", "Comment": ""}, {"Variable": "inhibition_model", "Value": "'SIMPLE_I'", "Comment": ""}, {"Variable": "J", "Value": "6*nS", "Comment": ""}, {"Variable": "k", "Value": 5, "Comment": ""}, {"Variable": "global_delay", "Value": "3.0*ms", "Comment": ""}, {"Variable": "cw", "Key-Value": [{"Key": "cw_in_SS", "Value": "J", "Comment": ""}, {"Key": "cw_in_BC", "Value": "J", "Comment": ""}, {"Key": "cw_SS_SS", "Value": "J", "Comment": ""}, {"Key": "cw_SS_BC", "Value": "J", "Comment": ""}, {"Key": "cw_BC_SS", "Value": "k*J", "Comment": ""}, {"Key": "cw_BC_BC", "Value": "k*J", "Comment": ""}]}, {"Variable": "delay", "Key-Value": [{"Key": "delay_in_SS", "Value": "global_delay", "Comment": ""}, {"Key": "delay_in_BC", "Value": "global_delay", "Comment": ""}, {"Key": "delay_SS_SS", "Value": "global_delay", "Comment": ""}, {"Key": "delay_SS_BC", "Value": "global_delay", "Comment": ""}, {"Key": "delay_BC_SS", "Value": "global_delay", "Comment": ""}, {"Key": "delay_BC_BC", "Value": "global_delay", "Comment": ""}]}, {"Variable": "sp", "Key-Value": [{"Key": "sp_in_SS", "Value": "0.8", "Comment": ""}]}, {"Variable": "VPM", "Value": "", "Comment": ""}, {"Variable": "SS", "Key-Value": [{"Key": "C", "Value": "200*pF", "Comment": ""}, {"Key": "gL", "Value": "10*nS", "Comment": ""}, {"Key": "EL", "Value": "-60 * mV", "Comment": ""}, {"Key": "Vcut", "Value": "20 * mV", "Comment": ""}, {"Key": "VT", "Value": "-63 * mV", "Comment": ""}, {"Key": "DeltaT", "Value": "2 * mV", "Comment": ""}, {"Key": "V_res", "Value": "-80 * mV", "Comment": ""}, {"Key": "Ee", "Value": "0 * mV", "Comment": ""}, {"Key": "Ei", "Value": "-80 * mV", "Comment": ""}, {"Key": "tau_e", "Value": "5*ms", "Comment": ""}, {"Key": "tau_i", "Value": "10*ms", "Comment": ""}, {"Key": "V_init_min", "Value": "EL", "Comment": ""}, {"Key": "V_init_max", "Value": "VT", "Comment": ""}]}, {"Variable": "BC", "Key-Value": [{"Key": "C", "Value": "200*pF", "Comment": ""}, {"Key": "gL", "Value": "10*nS", "Comment": ""}, {"Key": "EL", "Value": "-60 * mV", "Comment": ""}, {"Key": "Vcut", "Value": "20 * mV", "Comment": ""}, {"Key": "VT", "Value": "-63 * mV", "Comment": ""}, {"Key": "DeltaT", "Value": "2 * mV", "Comment": ""}, {"Key": "V_res", "Value": "-80 * mV", "Comment": ""}, {"Key": "Ee", "Value": "0 * mV", "Comment": ""}, {"Key": "Ei", "Value": "-80 * mV", "Comment": ""}, {"Key": "tau_e", "Value": "5*ms", "Comment": ""}, {"Key": "tau_i", "Value": "10*ms", "Comment": ""}, {"Key": "V_init_min", "Value": "EL", "Comment": ""}, {"Key": "V_init_max", "Value": "VT", "Comment": ""}]}]}
