--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,31 @@
-brian2genn
-django
+asn1crypto
+bcrypt
+Brian2
+Brian2GeNN
+cffi
+cryptography
+cycler
+Cython
+Django
+django-extensions
+django-sslserver
+Jinja2
+kiwisolver
+MarkupSafe
 matplotlib
+mpmath
+numpy
 pandas
-pytest
+paramiko
+pycparser
+PyNaCl
+pyOpenSSL
+pyparsing
+python-dateutil
+pytz
 scipy
 scp
+six
+sqlparse
+sympy
+Werkzeug
