--- a/cxsystem2/gui/cx_gui/examples/cobaeif_anatomy_config.json
+++ b/cxsystem2/gui/cx_gui/examples/cobaeif_anatomy_config.json
@@ -7,9 +7,7 @@
     "grid_radius": "210*um",
     "min_distance": "1*um",
     "do_init_vms": 1,
-    "output_path_and_filename": "./sim_results/cobaeif.gz",
-    "connections_saving_path_and_filename": "#",
-    "connections_loading_path_and_filename": "#",
+    "import_connections_from": "#",
     "load_positions_only": 0,
     "do_benchmark": 0,
     "profiling": 0,
@@ -24,7 +22,7 @@
     "cluster_address": "taito.csc.fi",
     "username": "shohokka",
     "remote_repo_path": "/homeappl/home/shohokka/CxSystem",
-    "remote_output_folder": "/wrk/shohokka/rev2_gamma/",
+    "remote_workspace": "/wrk/shohokka/rev2_gamma/",
     "remote_branch": "synapticnoise"
   },
   "IN": [
