--- a/cxsystem2/gui/cx_gui/examples/pytest_anatomy_config.json
+++ b/cxsystem2/gui/cx_gui/examples/pytest_anatomy_config.json
@@ -7,9 +7,7 @@
     "grid_radius": "210*um",
     "min_distance": "1*um",
     "do_init_vms": 0,
-    "output_path_and_filename": "../tests/temp_output_files/output.gz",
-    "connections_saving_path_and_filename": "../tests/temp_connection_files/connections.gz",
-    "connections_loading_path_and_filename": "../tests/connection_files/connections_20190517_06115909_python_200ms.gz",
+    "import_connections_from": "../tests/connection_files/connections_20190517_06115909_python_200ms.gz",
     "load_positions_only": 0,
     "do_benchmark": 0,
     "profiling": 0,
@@ -24,7 +22,7 @@
     "cluster_address": "taito.csc.fi",
     "username": "andalibi",
     "remote_repo_path": "/homeappl/home/andalibi/CxSystem",
-    "remote_output_folder": "/homeappl/home/andalibi/CxSystem/out",
+    "remote_workspace": "/homeappl/home/andalibi/CxSystem/out",
     "remote_branch": "frontend"
   },
   "IN": [
