--- a/cxsystem2/gui/cx_gui/examples/cobaeif_physiology_config.json
+++ b/cxsystem2/gui/cx_gui/examples/cobaeif_physiology_config.json
@@ -1,1 +1,264 @@
-{"physio_data": [{"Variable": "model_variation", "Value": 1, "Comment": ""}, {"Variable": "neuron_model", "Value": "'EIF'", "Comment": ""}, {"Variable": "excitation_model", "Value": "'SIMPLE_E'", "Comment": ""}, {"Variable": "inhibition_model", "Value": "'SIMPLE_I'", "Comment": ""}, {"Variable": "J", "Value": "6*nS", "Comment": ""}, {"Variable": "k", "Value": 5, "Comment": ""}, {"Variable": "global_delay", "Value": "3.0*ms", "Comment": ""}, {"Variable": "cw", "Key-Value": [{"Key": "cw_in_SS", "Value": "J", "Comment": ""}, {"Key": "cw_in_BC", "Value": "J", "Comment": ""}, {"Key": "cw_SS_SS", "Value": "J", "Comment": ""}, {"Key": "cw_SS_BC", "Value": "J", "Comment": ""}, {"Key": "cw_BC_SS", "Value": "k*J", "Comment": ""}, {"Key": "cw_BC_BC", "Value": "k*J", "Comment": ""}]}, {"Variable": "delay", "Key-Value": [{"Key": "delay_in_SS", "Value": "global_delay", "Comment": ""}, {"Key": "delay_in_BC", "Value": "global_delay", "Comment": ""}, {"Key": "delay_SS_SS", "Value": "global_delay", "Comment": ""}, {"Key": "delay_SS_BC", "Value": "global_delay", "Comment": ""}, {"Key": "delay_BC_SS", "Value": "global_delay", "Comment": ""}, {"Key": "delay_BC_BC", "Value": "global_delay", "Comment": ""}]}, {"Variable": "sp", "Key-Value": [{"Key": "sp_in_SS", "Value": "0.8", "Comment": ""}]}, {"Variable": "VPM", "Value": "", "Comment": ""}, {"Variable": "SS", "Key-Value": [{"Key": "C", "Value": "200*pF", "Comment": ""}, {"Key": "gL", "Value": "10*nS", "Comment": ""}, {"Key": "EL", "Value": "-60 * mV", "Comment": ""}, {"Key": "Vcut", "Value": "20 * mV", "Comment": ""}, {"Key": "VT", "Value": "-63 * mV", "Comment": ""}, {"Key": "DeltaT", "Value": "2 * mV", "Comment": ""}, {"Key": "V_res", "Value": "-80 * mV", "Comment": ""}, {"Key": "Ee", "Value": "0 * mV", "Comment": ""}, {"Key": "Ei", "Value": "-80 * mV", "Comment": ""}, {"Key": "tau_e", "Value": "5*ms", "Comment": ""}, {"Key": "tau_i", "Value": "10*ms", "Comment": ""}, {"Key": "V_init_min", "Value": "EL", "Comment": ""}, {"Key": "V_init_max", "Value": "VT", "Comment": ""}]}, {"Variable": "BC", "Key-Value": [{"Key": "C", "Value": "200*pF", "Comment": ""}, {"Key": "gL", "Value": "10*nS", "Comment": ""}, {"Key": "EL", "Value": "-60 * mV", "Comment": ""}, {"Key": "Vcut", "Value": "20 * mV", "Comment": ""}, {"Key": "VT", "Value": "-63 * mV", "Comment": ""}, {"Key": "DeltaT", "Value": "2 * mV", "Comment": ""}, {"Key": "V_res", "Value": "-80 * mV", "Comment": ""}, {"Key": "Ee", "Value": "0 * mV", "Comment": ""}, {"Key": "Ei", "Value": "-80 * mV", "Comment": ""}, {"Key": "tau_e", "Value": "5*ms", "Comment": ""}, {"Key": "tau_i", "Value": "10*ms", "Comment": ""}, {"Key": "V_init_min", "Value": "EL", "Comment": ""}, {"Key": "V_init_max", "Value": "VT", "Comment": ""}]}]}
+{
+  "physio_data": [
+    {
+      "Variable": "model_variation",
+      "Value": 1,
+      "Comment": ""
+    },
+    {
+      "Variable": "neuron_model",
+      "Value": "'EIF'",
+      "Comment": ""
+    },
+    {
+      "Variable": "excitation_model",
+      "Value": "'SIMPLE_E'",
+      "Comment": ""
+    },
+    {
+      "Variable": "inhibition_model",
+      "Value": "'SIMPLE_I'",
+      "Comment": ""
+    },
+    {
+      "Variable": "J",
+      "Value": "6*nS",
+      "Comment": ""
+    },
+    {
+      "Variable": "k",
+      "Value": 5,
+      "Comment": ""
+    },
+    {
+      "Variable": "global_delay",
+      "Value": "3.0*ms",
+      "Comment": ""
+    },
+    {
+      "Variable": "cw",
+      "Key-Value": [
+        {
+          "Key": "cw_in_SS",
+          "Value": "J",
+          "Comment": ""
+        },
+        {
+          "Key": "cw_in_BC",
+          "Value": "J",
+          "Comment": ""
+        },
+        {
+          "Key": "cw_SS_SS",
+          "Value": "J",
+          "Comment": ""
+        },
+        {
+          "Key": "cw_SS_BC",
+          "Value": "J",
+          "Comment": ""
+        },
+        {
+          "Key": "cw_BC_SS",
+          "Value": "k*J",
+          "Comment": ""
+        },
+        {
+          "Key": "cw_BC_BC",
+          "Value": "k*J",
+          "Comment": ""
+        }
+      ]
+    },
+    {
+      "Variable": "delay",
+      "Key-Value": [
+        {
+          "Key": "delay_in_SS",
+          "Value": "global_delay",
+          "Comment": ""
+        },
+        {
+          "Key": "delay_in_BC",
+          "Value": "global_delay",
+          "Comment": ""
+        },
+        {
+          "Key": "delay_SS_SS",
+          "Value": "global_delay",
+          "Comment": ""
+        },
+        {
+          "Key": "delay_SS_BC",
+          "Value": "global_delay",
+          "Comment": ""
+        },
+        {
+          "Key": "delay_BC_SS",
+          "Value": "global_delay",
+          "Comment": ""
+        },
+        {
+          "Key": "delay_BC_BC",
+          "Value": "global_delay",
+          "Comment": ""
+        }
+      ]
+    },
+    {
+      "Variable": "sp",
+      "Key-Value": [
+        {
+          "Key": "sp_in_SS",
+          "Value": "0.8",
+          "Comment": ""
+        }
+      ]
+    },
+    {
+      "Variable": "VPM",
+      "Value": "",
+      "Comment": ""
+    },
+    {
+      "Variable": "SS",
+      "Key-Value": [
+        {
+          "Key": "C",
+          "Value": "200*pF",
+          "Comment": ""
+        },
+        {
+          "Key": "gL",
+          "Value": "10*nS",
+          "Comment": ""
+        },
+        {
+          "Key": "EL",
+          "Value": "-60 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "Vcut",
+          "Value": "20 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "VT",
+          "Value": "-63 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "DeltaT",
+          "Value": "2 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "V_res",
+          "Value": "-80 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "Ee",
+          "Value": "0 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "Ei",
+          "Value": "-80 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "tau_e",
+          "Value": "5*ms",
+          "Comment": ""
+        },
+        {
+          "Key": "tau_i",
+          "Value": "10*ms",
+          "Comment": ""
+        },
+        {
+          "Key": "V_init_min",
+          "Value": "EL",
+          "Comment": ""
+        },
+        {
+          "Key": "V_init_max",
+          "Value": "VT",
+          "Comment": ""
+        }
+      ]
+    },
+    {
+      "Variable": "BC",
+      "Key-Value": [
+        {
+          "Key": "C",
+          "Value": "200*pF",
+          "Comment": ""
+        },
+        {
+          "Key": "gL",
+          "Value": "10*nS",
+          "Comment": ""
+        },
+        {
+          "Key": "EL",
+          "Value": "-60 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "Vcut",
+          "Value": "20 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "VT",
+          "Value": "-63 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "DeltaT",
+          "Value": "2 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "V_res",
+          "Value": "-80 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "Ee",
+          "Value": "0 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "Ei",
+          "Value": "-80 * mV",
+          "Comment": ""
+        },
+        {
+          "Key": "tau_e",
+          "Value": "5*ms",
+          "Comment": ""
+        },
+        {
+          "Key": "tau_i",
+          "Value": "10*ms",
+          "Comment": ""
+        },
+        {
+          "Key": "V_init_min",
+          "Value": "EL",
+          "Comment": ""
+        },
+        {
+          "Key": "V_init_max",
+          "Value": "VT",
+          "Comment": ""
+        }
+      ]
+    }
+  ]
+}
