--- a/cxsystem2/gui/cx_gui/examples/pytest_anatomy_config.json
+++ b/cxsystem2/gui/cx_gui/examples/pytest_anatomy_config.json
@@ -1,1 +1,446 @@
-{"params": {"runtime": "0.2*second", "device": "Python", "sys_mode": "local", "scale": 1, "grid_radius": "210*um", "min_distance": "1*um", "init_vms": 1, "workspace_path": "~/CxWorkspace", "simulation_title": "pytest", "import_connections_from": "#", "load_positions_only": 0, "benchmark": 0, "profiling": 0, "save_input_video": 0, "multidimension_array_run": 0, "number_of_process": 1, "trials_per_config": 1, "default_clock": "0.1*ms", "run_in_cluster": 0, "cluster_job_file_path": "./slurm.job", "cluster_number_of_nodes": 1, "cluster_address": "taito.csc.fi", "cluster_username": "username", "cluster_workspace": "/homeappl/home/username/CxWorkspace"}, "IN": [{"idx": 0, "type": "VPM", "number_of_neurons": 60, "radius": "92*um", "spike_times": "[0.02]*second", "net_center": "--", "monitors": "[Sp]"}], "G": [{"idx": 1, "number_of_neurons": 267, "neuron_type": "PC", "neuron_subtype": "L4_PC1", "layer_idx": "[4->1]", "net_center": "--", "monitors": "[Sp]", "n_background_inputs": 630, "n_background_inhibition": 290}, {"idx": 2, "number_of_neurons": 109, "neuron_type": "PC", "neuron_subtype": "L4_PC2", "layer_idx": "[4->1]", "net_center": "--", "monitors": "[Sp]", "n_background_inputs": 630, "n_background_inhibition": 290}, {"idx": 3, "number_of_neurons": 40, "neuron_type": "SS", "neuron_subtype": "L4_SS", "layer_idx": 4, "net_center": "--", "monitors": "[Sp]", "n_background_inputs": 630, "n_background_inhibition": 290}, {"idx": 4, "number_of_neurons": 32, "neuron_type": "BC", "neuron_subtype": "L4_BC", "layer_idx": 4, "net_center": "--", "monitors": "[Sp]", "n_background_inputs": 500, "n_background_inhibition": 180}, {"idx": 5, "number_of_neurons": 13, "neuron_type": "MC", "neuron_subtype": "L4_MC", "layer_idx": 4, "net_center": "--", "monitors": "[Sp]", "n_background_inputs": 500, "n_background_inhibition": 180}], "S": [{"receptor": "ge", "pre_syn_idx": 0, "post_syn_idx": "1[C]0ba", "syn_type": "Depressing", "p": "--", "n": "3+4", "monitors": "--", "load_connection": "0-->", "save_connection": "0-->", "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 0, "post_syn_idx": "2[C]0ba", "syn_type": "Depressing", "p": "--", "n": "3+4", "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 0, "post_syn_idx": 3, "syn_type": "Depressing", "p": "--", "n": 8, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 0, "post_syn_idx": 4, "syn_type": "Depressing", "p": "--", "n": 8, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 4, "post_syn_idx": 4, "syn_type": "Depressing", "p": "0.013940977", "n": 16, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 4, "post_syn_idx": 5, "syn_type": "Depressing", "p": "0.01282934", "n": 18, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 4, "post_syn_idx": "1[C]0s", "syn_type": "Depressing", "p": "0.013885801", "n": 18, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 4, "post_syn_idx": "2[C]0s", "syn_type": "Depressing", "p": "0.01403348", "n": 18, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 4, "post_syn_idx": 3, "syn_type": "Depressing", "p": "0.017338078", "n": 17, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 5, "post_syn_idx": 4, "syn_type": "Depressing", "p": "0.009981361", "n": 14, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 5, "post_syn_idx": 5, "syn_type": "Depressing", "p": "0.009436943", "n": 15, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 5, "post_syn_idx": "1[C]2", "syn_type": "Depressing", "p": "0.014554784", "n": 12, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 5, "post_syn_idx": "2[C]2", "syn_type": "Depressing", "p": "0.010994309", "n": 15, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "gi", "pre_syn_idx": 5, "post_syn_idx": 3, "syn_type": "Depressing", "p": "0.013342538", "n": 14, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 1, "post_syn_idx": 4, "syn_type": "Depressing", "p": "0.010194713", "n": 5, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 1, "post_syn_idx": 5, "syn_type": "Depressing", "p": "0.007830835", "n": 9, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 1, "post_syn_idx": "1[C]0ab", "syn_type": "Depressing", "p": "0.01019405445+0.01019405445", "n": "3+3", "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 1, "post_syn_idx": "2[C]0ab", "syn_type": "Depressing", "p": "0.0084690014+0.0084690014", "n": "3+3", "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 1, "post_syn_idx": 3, "syn_type": "Depressing", "p": "0.019963669", "n": 3, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 2, "post_syn_idx": 4, "syn_type": "Depressing", "p": "0.005890147", "n": 7, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 2, "post_syn_idx": 5, "syn_type": "Depressing", "p": "0.006282609", "n": 8, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 2, "post_syn_idx": "1[C]0ab", "syn_type": "Depressing", "p": "0.00883402025+0.00883402025", "n": "2+2", "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 2, "post_syn_idx": "2[C]0ab", "syn_type": "Depressing", "p": "0.00626230265+0.00626230265", "n": "3+3", "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 2, "post_syn_idx": 3, "syn_type": "Depressing", "p": "0.018242545", "n": 2, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 3, "post_syn_idx": 4, "syn_type": "Depressing", "p": "0.005913725", "n": 7, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 3, "post_syn_idx": 5, "syn_type": "Depressing", "p": "0.007150279", "n": 9, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 3, "post_syn_idx": "1[C]0ab", "syn_type": "Depressing", "p": "0.0100726696+0.0100726696", "n": "3+3", "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 3, "post_syn_idx": "2[C]0ab", "syn_type": "Depressing", "p": "0.00824733395+0.00824733395", "n": "3+3", "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}, {"receptor": "ge", "pre_syn_idx": 3, "post_syn_idx": 3, "syn_type": "Depressing", "p": "0.018695698", "n": 2, "monitors": "--", "load_connection": 1, "save_connection": 1, "custom_weight": "--"}]}
+{
+  "params": {
+    "runtime": "0.2*second",
+    "device": "Python",
+    "sys_mode": "local",
+    "scale": 1,
+    "grid_radius": "210*um",
+    "min_distance": "1*um",
+    "init_vms": 1,
+    "workspace_path": "~/CxWorkspace",
+    "simulation_title": "pytest",
+    "import_connections_from": "#",
+    "load_positions_only": 0,
+    "benchmark": 0,
+    "profiling": 0,
+    "save_input_video": 0,
+    "multidimension_array_run": 0,
+    "number_of_process": 1,
+    "trials_per_config": 1,
+    "default_clock": "0.1*ms",
+    "run_in_cluster": 0,
+    "cluster_job_file_path": "./slurm.job",
+    "cluster_number_of_nodes": 1,
+    "cluster_address": "taito.csc.fi",
+    "cluster_username": "username",
+    "cluster_workspace": "/homeappl/home/username/CxWorkspace"
+  },
+  "IN": [
+    {
+      "idx": 0,
+      "type": "VPM",
+      "number_of_neurons": 60,
+      "radius": "92*um",
+      "spike_times": "[0.02]*second",
+      "net_center": "--",
+      "monitors": "[Sp]"
+    }
+  ],
+  "G": [
+    {
+      "idx": 1,
+      "number_of_neurons": 267,
+      "neuron_type": "PC",
+      "neuron_subtype": "L4_PC1",
+      "layer_idx": "[4->1]",
+      "net_center": "--",
+      "monitors": "[Sp]",
+      "n_background_inputs": 630,
+      "n_background_inhibition": 290
+    },
+    {
+      "idx": 2,
+      "number_of_neurons": 109,
+      "neuron_type": "PC",
+      "neuron_subtype": "L4_PC2",
+      "layer_idx": "[4->1]",
+      "net_center": "--",
+      "monitors": "[Sp]",
+      "n_background_inputs": 630,
+      "n_background_inhibition": 290
+    },
+    {
+      "idx": 3,
+      "number_of_neurons": 40,
+      "neuron_type": "SS",
+      "neuron_subtype": "L4_SS",
+      "layer_idx": 4,
+      "net_center": "--",
+      "monitors": "[Sp]",
+      "n_background_inputs": 630,
+      "n_background_inhibition": 290
+    },
+    {
+      "idx": 4,
+      "number_of_neurons": 32,
+      "neuron_type": "BC",
+      "neuron_subtype": "L4_BC",
+      "layer_idx": 4,
+      "net_center": "--",
+      "monitors": "[Sp]",
+      "n_background_inputs": 500,
+      "n_background_inhibition": 180
+    },
+    {
+      "idx": 5,
+      "number_of_neurons": 13,
+      "neuron_type": "MC",
+      "neuron_subtype": "L4_MC",
+      "layer_idx": 4,
+      "net_center": "--",
+      "monitors": "[Sp]",
+      "n_background_inputs": 500,
+      "n_background_inhibition": 180
+    }
+  ],
+  "S": [
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 0,
+      "post_syn_idx": "1[C]0ba",
+      "syn_type": "Depressing",
+      "p": "--",
+      "n": "3+4",
+      "monitors": "--",
+      "load_connection": "0-->",
+      "save_connection": "0-->",
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 0,
+      "post_syn_idx": "2[C]0ba",
+      "syn_type": "Depressing",
+      "p": "--",
+      "n": "3+4",
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 0,
+      "post_syn_idx": 3,
+      "syn_type": "Depressing",
+      "p": "--",
+      "n": 8,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 0,
+      "post_syn_idx": 4,
+      "syn_type": "Depressing",
+      "p": "--",
+      "n": 8,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 4,
+      "post_syn_idx": 4,
+      "syn_type": "Depressing",
+      "p": "0.013940977",
+      "n": 16,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 4,
+      "post_syn_idx": 5,
+      "syn_type": "Depressing",
+      "p": "0.01282934",
+      "n": 18,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 4,
+      "post_syn_idx": "1[C]0s",
+      "syn_type": "Depressing",
+      "p": "0.013885801",
+      "n": 18,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 4,
+      "post_syn_idx": "2[C]0s",
+      "syn_type": "Depressing",
+      "p": "0.01403348",
+      "n": 18,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 4,
+      "post_syn_idx": 3,
+      "syn_type": "Depressing",
+      "p": "0.017338078",
+      "n": 17,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 5,
+      "post_syn_idx": 4,
+      "syn_type": "Depressing",
+      "p": "0.009981361",
+      "n": 14,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 5,
+      "post_syn_idx": 5,
+      "syn_type": "Depressing",
+      "p": "0.009436943",
+      "n": 15,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 5,
+      "post_syn_idx": "1[C]2",
+      "syn_type": "Depressing",
+      "p": "0.014554784",
+      "n": 12,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 5,
+      "post_syn_idx": "2[C]2",
+      "syn_type": "Depressing",
+      "p": "0.010994309",
+      "n": 15,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "gi",
+      "pre_syn_idx": 5,
+      "post_syn_idx": 3,
+      "syn_type": "Depressing",
+      "p": "0.013342538",
+      "n": 14,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 1,
+      "post_syn_idx": 4,
+      "syn_type": "Depressing",
+      "p": "0.010194713",
+      "n": 5,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 1,
+      "post_syn_idx": 5,
+      "syn_type": "Depressing",
+      "p": "0.007830835",
+      "n": 9,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 1,
+      "post_syn_idx": "1[C]0ab",
+      "syn_type": "Depressing",
+      "p": "0.01019405445+0.01019405445",
+      "n": "3+3",
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 1,
+      "post_syn_idx": "2[C]0ab",
+      "syn_type": "Depressing",
+      "p": "0.0084690014+0.0084690014",
+      "n": "3+3",
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 1,
+      "post_syn_idx": 3,
+      "syn_type": "Depressing",
+      "p": "0.019963669",
+      "n": 3,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 2,
+      "post_syn_idx": 4,
+      "syn_type": "Depressing",
+      "p": "0.005890147",
+      "n": 7,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 2,
+      "post_syn_idx": 5,
+      "syn_type": "Depressing",
+      "p": "0.006282609",
+      "n": 8,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 2,
+      "post_syn_idx": "1[C]0ab",
+      "syn_type": "Depressing",
+      "p": "0.00883402025+0.00883402025",
+      "n": "2+2",
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 2,
+      "post_syn_idx": "2[C]0ab",
+      "syn_type": "Depressing",
+      "p": "0.00626230265+0.00626230265",
+      "n": "3+3",
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 2,
+      "post_syn_idx": 3,
+      "syn_type": "Depressing",
+      "p": "0.018242545",
+      "n": 2,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 3,
+      "post_syn_idx": 4,
+      "syn_type": "Depressing",
+      "p": "0.005913725",
+      "n": 7,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 3,
+      "post_syn_idx": 5,
+      "syn_type": "Depressing",
+      "p": "0.007150279",
+      "n": 9,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 3,
+      "post_syn_idx": "1[C]0ab",
+      "syn_type": "Depressing",
+      "p": "0.0100726696+0.0100726696",
+      "n": "3+3",
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 3,
+      "post_syn_idx": "2[C]0ab",
+      "syn_type": "Depressing",
+      "p": "0.00824733395+0.00824733395",
+      "n": "3+3",
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    },
+    {
+      "receptor": "ge",
+      "pre_syn_idx": 3,
+      "post_syn_idx": 3,
+      "syn_type": "Depressing",
+      "p": "0.018695698",
+      "n": 2,
+      "monitors": "--",
+      "load_connection": 1,
+      "save_connection": 1,
+      "custom_weight": "--"
+    }
+  ]
+}
