pytest and cobaeif examples fixed and beautified and tested

--- a/cxsystem2/gui/cx_gui/examples/cobaeif_anatomy_config.json
+++ b/cxsystem2/gui/cx_gui/examples/cobaeif_anatomy_config.json
@@ -19,11 +19,11 @@
     "trials_per_config": 1,
     "default_clock": "0.1*ms",
     "run_in_cluster": 0,
-    "cluster_job_file_path": "./slurm.job",
-    "cluster_number_of_nodes": 3,
+    "cluster_job_file_path": "./cxsystem2/slurm.job",
+    "cluster_number_of_nodes": 1,
     "cluster_address": "taito.csc.fi",
-    "cluster_username": "shohokka",
-    "cluster_workspace": "/homeappl/home/shohokka/CxWorkspace"
+    "cluster_username": "username",
+    "cluster_workspace": "/homeappl/home/username/CxWorkspace"
   },
   "IN": [
     {
