--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
-include **/slurm.job
+include **/csc_taito.job
+include **/cscs_daint.job
 recursive-include tests *.py *.csv *.json *.gz
 recursive-include cxsystem2 *
 recursive-include cxsystem2/gui/cx_gui *.css *.js *.html *.json
