--- a/requirements.txt
+++ b/requirements.txt
@@ -2,38 +2,40 @@ wheel
 requests
 asn1crypto
 bcrypt
-Brian2
-Brian2GeNN
+brian2
+brian2genn
 cffi
 cryptography
 cycler
-Cython
-Django
+cython
+django
 django-extensions
 django-sslserver
 docopt
-IPython
-Jinja2
+ipython
+jinja2
 kiwisolver
-MarkupSafe
+markupsafe
 matplotlib
 mpmath
 numpy
 pandas
-paramiko
 ping3
+paramiko
 pycparser
-PyNaCl
-pyOpenSSL
+pynacl
+pyopenssl
 pyparsing
 python-dateutil
+pycparserpynacl
+pycparser
 pytz
 scipy
 scp
 six
 sqlparse
 sympy
-Werkzeug
+werkzeug
 sphinx
 sphinx-rtd-theme
 pyyaml
