Travis-ci test to run both 3.7 with requirements.txt forcing numpy >= 1.16.5 and separately python 3.9

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ os:
 - linux
 python:
 - '3.9'
+- '3.7'
+git:
+  depth: 3
+  quiet: true
 install:
 - pip install -r requirements.txt
 - pip install .
